# random_allocation

./: .gitignore  .gitmodules  .mypy.ini  README.md  __init__.py  environment.yml  pyproject.toml  pytest.ini  random_allocation_submission.ipynb  requirements.txt  setup.py
comparisons/: definitions.py  experiments.py  visualization.py
config/: environment.yml
docs/: PROJECT_STRUCTURE.md  test_documentation.md  type_annotations_guide.md
examples/: paper_experiments.py
other_methods/: shuffle.py
random_allocation/: RDP.py  analytic.py
random_allocation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
random_allocation/comparisons/: definitions.py  experiments.py  structs.py  utils.py  visualization.py
random_allocation/examples/: debugging.py  paper_experiments.py  test_search_function.py  utility_comparison.py
random_allocation/external_sources/: Monte_Carlo_external.py  __init__.py  shuffle_external.py
random_allocation/notebooks/: __init__.py  paper_experiments.ipynb
random_allocation/other_methods/: poisson.py
random_allocation/other_schemes/: local.py  poisson.py  shuffle.py
random_allocation/random_allocation/: RDP.py  analytic.py  decomposition.py  loose_RDP.py
random_allocation/random_allocation_scheme/: Monte_Carlo.py  RDP.py  RDP_DCO.py  (+8 more)
random_allocation_scheme/: RDP.py  analytic.py  decomposition.py  loose_RDP.py
scripts/: check_types.py
tests/: README.md  TEST_STRUCTURE.md  __init__.py  basic_tests.py  check_types.py  data_handler_tests.py  release_tests.py  run_basic_suite.py  run_full_suite.py  run_release_suite.py  run_tests.py
(+25 files in other folders)
